# ClaudeOps

./: .browserslistrc  .dockerignore  .env.local.example  .env.production  .gitignore  DEPLOYMENT.md  Dockerfile  PRD-lite.md  PRD.md  README.md  components.json  current.md  docker-compose.yml  drizzle.config.ts  jest.config.js  next.config.js  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  pyproject.toml  runner.ts  server.js  server.ts  test-check.tsx  test-docker-agent.ts  test-docker-deployment.ts  test_syslog_agent.py  tsconfig.json  tsconfig.server.json
.docs/plans/quick-plans/: enhance-baseagent-logging.md
.docs/tmp/: docker-agent-refactoring-investigation.md
.next/: trace
.next/cache/: .previewinfo  .rscinfo
.next/server/: app-paths-manifest.json  server-reference-manifest.json
.next/server/app/: page.js
.next/server/chunks/: 213.js  338.js  361.js  464.js  486.js  518.js  923.js
.next/types/: link.d.ts  routes.d.ts  validator.ts
.next/types/app/: layout.ts  page.ts
.serena/: project.yml
claude_agents/: __init__.py  __main__.py  syslog_agent.py
docs/agent-framework/: README.md  api-reference.md  examples.md
docs/plans/claudeops/: claude-sdk-patterns.docs.md  database-patterns.docs.md  nextjs-patterns.docs.md  parallel-plan.md  requirements.md  shared.md  websocket-patterns.docs.md
drizzle/: 0000_same_vance_astro.sql  0001_tiny_wolfsbane.sql  0002_add_cost_request_id_index.sql  0003_map_health_status_values.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
examples/: docker-deployment-example.ts  health-agent-realtime-logging.md
monitoring/: prometheus.yml
scripts/: backup.sh  backup.ts  health-check.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/costs/: page.tsx
src/app/dashboard/: page.tsx
src/components/costs/: BudgetManager.tsx  CostAlerts.tsx  CostBreakdown.tsx  CostCharts.tsx  (+1 more)
src/hooks/: use-mobile.ts  useExecutionLogs.ts  useExecutionStatus.ts  useSystemStatus.ts  useWebSocket.ts
tests/: __init__.py  test_agent.py
(+207 files in other folders)
